# Umpire

./: .gitlab-ci.yml  .gitmodules  .uberenv_config.json  CHANGELOG.md  CMakeLists.txt  build-template.yml  cluster-template.yml  test.yml
.gitlab/: butte.yml  lassen-jobs.yml  lassen.yml  quartz-jobs.yml  quartz.yml
.gitlab/ci/: build.yml  build_butte.yml  build_lassen.yml  build_quartz.yml
.gitlab/conf/host-configs/blueos_3_ppc64le_ib/: clang_3_9_1.cmake  clang_4_0_0.cmake  clang_coral_2017_06_29.cmake  clang_coral_2017_09_06.cmake  clang_coral_2017_09_18.cmake  nvcc_clang_coral_2017_08_31.cmake
.gitlab/conf/host-configs/toss_3_x86_64_ib/: icpc_16_0_4.cmake  icpc_17_0_2.cmake  icpc_18_0_0.cmake
.gitlab/scripts/: build.sh
.uberenv/: spack_configs
benchmarks/: CMakeLists.txt  allocator_create_destroy.cpp
cmake/: SetupMacros.cmake
docs/sphinx/features/: device_allocators.rst
examples/: CMakeLists.txt  device-allocator.cpp
examples/cookbook/: CMakeLists.txt
examples/tutorial/: CMakeLists.txt
gitlab/: child-pipeline.yml  lassen-template.yml  quartz-jobs.yml  quartz-template.yml
host-configs/: butte-blueos_3_ppc64le_ib_p9-xl@beta2019.06.20-s2ja6weqh6vhw5m6he476ncsmwrphi5p.cmake
host-configs/blueos_3_ppc64le_ib/: clang_3_9_1.cmake  clang_4_0_0.cmake  clang_coral_2017_08_31.cmake  gcc_4_9_3.cmake  nvcc_clang_coral_2017_08_31.cmake  nvcc_clang_coral_2017_09_18.cmake
host-configs/toss_3_x86_64_ib/: icpc_18_0_0.cmake
scripts/: launch.sh
scripts/gitlab/: after_test.sh  build.sh  build_and_test.sh  generate_host_configs.py  list_of_specs.json
scripts/spack_packages/umpire/: package.py
scripts/uberenv/: uberenv.py
scripts/uberenv/spack_configs/blueos_3_ppc64le_ib/: compilers.yaml  packages.yaml
scripts/uberenv/spack_configs/toss_3_x86_64_ib/: compilers.yaml  packages.yaml
src/umpire/: Allocator.cpp  Allocator.hpp  Allocator.inl  AllocatorBase.inl  CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  Umpire.cpp  config.hpp.in
src/umpire/event/: CMakeLists.txt  database_recorder.cpp  database_recorder.hpp  event.hpp  event_database.hpp  event_json.hpp  event_store.hpp  event_store_recorder.cpp  event_store_recorder.hpp  file_recorder.cpp  json_file_store.cpp  json_file_store.hpp  quest_database.cpp  quest_database.hpp  recorder_chain.hpp  recorder_factory.cpp  recorder_factory.hpp  sqlite_database.cpp  sqlite_database.hpp
src/umpire/op/: MemoryOperationRegistry.cpp
src/umpire/strategy/: DynamicPoolList.cpp  DynamicPoolList.hpp  DynamicPoolMap.cpp  DynamicPoolMap.hpp  NumaPolicy.cpp  QuickPool.hpp
src/umpire/tpl/: CMakeLists.txt
src/umpire/util/: CMakeLists.txt  MPI.cpp  Macros.hpp  io.cpp  io.hpp
tests/integration/: operation_tests.cpp
tests/integration/io/: CMakeLists.txt
tests/integration/replay/: CMakeLists.txt  replay_tests.cpp
tools/: CMakeLists.txt
tools/replay/: CMakeLists.txt  ReplayInterpreter.cpp  ReplayInterpreter.hpp  ReplayOperationManager.cpp  ReplayOperationManager.hpp  replay.cpp  replaydiff.cpp
